# SR-Agents

./: .gitignore  LICENSE  README.md  pyproject.toml
data/bench/instances/: champ.json  logicbench.json  medcalcbench.json  theoremqa.json  toolqa.json
src/sragents/: __init__.py  config.py  corpus.py  llm.py  prompts.py
src/sragents/cli/: __init__.py  _common.py  evaluate.py  experiment.py  hybrid.py  infer.py  listing.py  main.py  rerank.py  retrieve.py
src/sragents/evaluate/: __init__.py  base.py  common.py  metrics.py
src/sragents/evaluate/datasets/: __init__.py  champ.py  logicbench.py  medcalcbench.py  theoremqa.py  toolqa.py
src/sragents/evaluate/datasets/bigcodebench/: __init__.py  execution.py  sanitize.py
src/sragents/experiments/: __init__.py  definitions.py  runner.py
src/sragents/infer/: __init__.py  base.py  runner.py  schema.py
src/sragents/infer/engines/: __init__.py  direct.py  progressive_disclosure.py  react.py  tool_loop.py
src/sragents/infer/providers/: __init__.py  distractor.py  llm_select.py  none.py  oracle.py  topk.py
src/sragents/retrieve/: __init__.py  _sparse_core.py  base.py  bm25.py  dense.py  hybrid.py  llm_rerank.py  metrics.py  schema.py  tfidf.py
src/sragents/toolqa/: __init__.py  fewshots.py  prompts.py
src/sragents/toolqa/tools/: __init__.py  calculator.py  code.py  graph.py  table.py  text.py
